<resources>
    <string name="app_name">Shop</string>
    <string name="content_description">image</string>
    <string name="sum_shop">Sum Shop</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or">~ OR ~</string>
    <string name="register"><u>Register</u></string>
    <string name="invalid_mail">Invalid e-mail address</string>
    <string name="wrong_email_password">Wrong E-mail or Password, Try Again !</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="sign_up_snack_text">Registration successfully created</string>
    <string name="registered_mail">E-mail address already registered!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="incomplete_information_entered">Incomplete information entered!</string>
    <string name="login"><u>Login</u></string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your e-mail address we\'ll send you a link to reset your password</string>
    <string name="btn_submit">Submit</string>
    <string name="invalid_password">Must be 6 digit</string>
    <string name="required_field">Required Field</string>
    <string name="required_name">Please enter first name</string>
    <string name="required_card_name">Please enter card name</string>
    <string name="required_lastname">Please enter last name</string>
    <string name="required_card_number">Please enter card number</string>
    <string name="required_email">Please enter a valid email address(aa@gmail.com)</string>
    <string name="required_picture">Please put a picture</string>
    <string name="required_expiry">Please enter expiry date</string>
    <string name="required_password">Please enter 6 digit password</string>
    <string name="required_address">Please enter adress</string>
    <string name="required_cvv">Please enter CVV</string>
    <string name="accept_condition">Please accept terms and condition</string>
    <string name="password_match">Password not matches</string>
    <string name="success">Success:)</string>
    <string name="product_add">Product added</string>
    <string name="fail">Fail:(</string>
    <string name="empty_bag">Empty Bag</string>
    <string name="email_sent">Email sent</string>
    <string name="please_wait">please wait</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_update">Update</string>
    <string name="see_all"><u>See All</u></string>
    <string name="shop_condition">
        You may not order or obtain products or services from the Site if you \n

        <b>(a) </b>do not agree to these Terms,\n
        <b>(b) </b>are not the older of\n
        \t\t<b>(i) </b>at least 18 years of age or\n
        \t\t<b>(ii) </b> legal age to form a binding contract with Sumeyra,\n
        <b>(c)</b> are prohibited from accessing or using the Site or any of the Site’s contents,
        goods or services by applicable law.\n

These Terms are subject to change by Sumeyra without prior written notice at any time,
        in our sole discretion. The latest version of these Terms will be posted on this Site,
        and you should review these Terms before purchasing any product or services that are
        available through this Site. Your continued use of this Site after a posted change
        in these Terms will constitute your acceptance of and agreement to such changes.


These Terms are an integral part of the General Terms of Use that apply generally to the use of
        our Site. You should also carefully review our Privacy Policy before placing an order for
        products or services through this Site. \n


<b>1.  Placing Your Order &amp; Order Cancellation</b>\n
All orders placed on the Site are subject to email confirmation by us; we may choose not to accept
        any orders in our sole discretion. Please note that the products displayed on the
        Site may be out-of-stock or discontinued, and availability is not guaranteed.
        You agree that your order is an offer to buy, pursuant to these Terms,
        all products listed in your order. If accepted, your confirmation e-mail will contain
        your order number and details of the items you have ordered. Registered users may also
        refer to the “My Account” section of the Site for the details of their order. \n



<b>2. Prices</b> \n
All prices are in US Dollars. All prices posted on this Site are subject to change without notice.
        The price charged for a product will be the price in effect at the time the order is
        placed and will be set out in your order confirmation email. Price increases will only
        apply to orders placed after such changes. Posted prices do not include taxes or charges
        for shipping and handling. All such taxes and charges will be added to your merchandise
        total and will be itemized in your shopping cart and in your order confirmation email.
        We are not responsible for pricing, typographical, or other errors in any offer by us and
        we reserve the right to cancel any orders arising from such errors.


Before finalizing and placing your order you are advised to check the final sale price,
        and total amount due, which is inclusive of sales tax applied in accordance with
        applicable state and local regulations based on your shipping address.



The amount of sales tax charged on your order will depend upon various factors, including,
        for example, the item purchased, sales price and destination of the shipment.
        Since sales tax regulations are subject to change, please refer to your final invoice with
        the shipping confirmation e-mail to see the amount of sales tax collected on the
        associated order. \n

<b>3. Shipping Costs</b> \n
You are responsible for the shipping costs associated with the delivery of the products you
        purchase on the Site as specified on your order confirmation.\n

<b>4. Shipments and Delivery</b> \n
The specific terms of shipment and delivery of the products are outlined in detail on the
        “Shipping &amp; Delivery”section on this Site and are an integral and essential part of these
        General Terms and Conditions of Sale.

Shipping and delivery dates are estimates only and cannot be guaranteed. We are not liable for
        any delays in shipments.


You bear all risk of loss and damage to the products from the time the same have cleared our
        fulfillment house. Delivery is deemed complete and title to the products passes to you
        upon acceptance of shipment by a common carrier.\n

<b>5. Payments</b> \n
Payment for the orders of products on the Site and the corresponding shipping and delivery costs
        must be made by you at the time the order is submitted, using the data provided in the
        order form. You can use the following payment methods:\n


\t - Credit card or debit card \n

\t - Paypal \n

\t - Klarna \n

You represent and warrant that \n
        \t <b>(i)</b> the credit card and payment information you supply to us is
        true, correct, and complete, \n
        \t <b>(ii)</b> you are duly authorized to use such credit card or
        payment method for the purchase, \n
        \t <b>(iii)</b> charges incurred by you will be honored by your
        credit card company, and \n
        \t <b>(iv)</b> you will pay charges incurred by you at the posted prices, including all
        applicable taxes, if any.



The use of credit and debit cards and the financial information
        (e.g. the credit/debit card number, user codes, verification of the owner and expiration
        date, etc.) will be protected by encryption protocols and specific security systems

        for online transactions. Please refer to our Privacy Policy for more information on how
        Sumeyra handles and protects your data. Sumeyra will only use the data to complete
        the procedures for the purchase of the products and to issue refunds if the products
        are returned, or if it is necessary to prevent or report cases of fraud committed on the
        Site to the police. \n



<b>6. Product Quality and Characteristics</b>\n
The products offered for sale on the Site bear one or more Sumeyra trademarks
        and/or manufacturers authorized Sumeyra. The Products for sale on the
        Website are new articles only, with the characteristics and standards typical of
        Sumeyra garments.

The main characteristics of each product are listed on the relevant product page of the Site.

All the products offered for sale on the Site have an ID tag secured with a single-use seal.
        This tag and its seal are an integral part of the product.
        Their removal or damage will result in the forfeiture of the right of return or exchange
        unless otherwise required by applicable law.



Please note that while we have tried to accurately display the colors of products,
        the actual colors you see will depend on your monitor and browser and may not be accurate.\n




<b>7. Returns and Refunds</b>\n
        For more information about returns and exchanges of Sumeyra products,
        please refer to the Returns and Refunds section of the Site, which
        forms an integral part of these General Terms and Conditions of Sale.

</string>
    <string name="term_second_title">Terms of Use of the Sum Shop App</string>
    <string name="terms_first_title">Terms Of Services</string>
    <string name="pay">Pay</string>
    <string name="product_title">Product Title</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="child">Child</string>
    <string name="submit">Submit</string>
    <string name="total_amount">Total Amount:</string>
    <string name="checkout">Checkout</string>
    <string name="add_your_style">Add Your Style!</string>
    <string name="add_your_style_and_earn_money">Add your style and earn money!</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="discover">Discover</string>
    <string name="payment">Payment</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">Cvv</string>
    <string name="address">Address</string>
    <string name="product_explainn_product_explainn">Product Explainn Product Explainn</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="back_to_shopping">Back To Shopping</string>
    <string name="update">Update</string>
    <string name="basket">Basket</string>
    <string name="_0">0</string>
    <string name="_0_TL">0.0 TL</string>
    <string name="fav_icon">fav_icon</string>
    <string name="fav_product_image">fav_product_image</string>
    <string name="accept">Accept</string>
    <string name="product_image">product image</string>
    <string name="border">border</string>
    <string name="logo">logo</string>
</resources>